<resources>
    <string name="app_name">CardMe</string>
    <string name="button_1">Edit Your Cards</string>
    <string name="button_2">Connections</string>
    <string name="button_3">Send Card</string>
    <string name="button_4">Receive Card</string>
    <string name="button1">Edit My Cards</string>
    <string name="form_name">Enter Your Name</string>
    <string name="form_phone">Enter Your Phone Number</string>
    <string name="form_email">Enter Your Email</string>


</resources>
